--- a/WebApplication5/Dockerfile
+++ b/WebApplication5/Dockerfile
@@ -7,7 +7,7 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
-COPY ["WebApplication5/WebApplication5.csproj", "WebApplication5/"]
+COPY ["/WebApplication5.csproj", "WebApplication5/"]
 RUN dotnet restore "WebApplication5/WebApplication5.csproj"
 COPY . .
 WORKDIR "/src/WebApplication5"
